import game.Game;
import game.Human;
import game.Player;

import java.util.Scanner;

/**
 * This class is used to start the game and to print out game states.
 */
public class Main {

    /**
     * Inputs to check
     */
    private static final String VS_COM = "1";
    private static final String VS_HUMAN = "2";
    private static final String YES = "yes";

    /**
     * Is used to set console Colors
     */
    public static final String ANSI_RESET = "\u001B[0m";
    public static final String ANSI_RED = "\u001B[31m";
    public static final String ANSI_BLUE = "\u001B[34m";
    public static final String ANSI_CYAN = "\u001B[36m";

    private static final String VS_COM_STR = "den Computer";
    private static final String VS_HUMAN_STR = "einen Gegenspieler";

    private static final String SPIELERANZAHL = ANSI_CYAN + "Bitte geben Sie die Anzahl der Spieler an. " +
            "Bei 1 wird ein Spiel gegen einen Computer eröffnet.\n" + ANSI_RESET +
            "HINWEIS: Es ist nur eine maximale Spieleranzahl von 2 Spielern möglich";
    private static final String ERROR_SPIELERANZAHL = ANSI_RED + "Diese Eingabe ist nicht möglich! " +
            "Bitte wählen Sie die Anzahl 1 oder 2 für ein gültiges Spiel!" + ANSI_RESET;
    private static final String INTRO = ANSI_CYAN + "Sie haben sich für ein Spiel gegen %s entschieden. " +
            "Die Felder sind der Reihe nach von 1 bis 9 durchnummeriert.\n" +
            "Zur Wahl eines Feldes geben Sie eine Zahl von 1 bis 9 ein. Viel Spaß!\n" + ANSI_RESET;
    private static final String CHOOSE = ANSI_CYAN + "Spieler %d: Wählen Sie ein Feld.\n" + ANSI_RESET;
    private static final String COM_TURN = ANSI_CYAN + "Der Computer ist an der Reihe." + ANSI_RESET;
    private static final String WIN = ANSI_BLUE + "Herzlichen Glückwunsch Spieler %d! Sie haben Gewonnen!\n" + ANSI_RESET;
    private static final String NO_WINNER = ANSI_BLUE + "Leider gibt es keinen Sieger." + ANSI_RESET;
    private static final String COM_WINS = ANSI_BLUE + "Der Computer hat leider gewonnen." + ANSI_RESET;
    private static final String REPLAY = ANSI_CYAN + "Wollen Sie eine weitere Runde spielen?\n" +
            "Für ein ja geben Sie bitte yes ein, bei einer anderen Eingabe wird das Spiel beendet." + ANSI_RESET;

    /**
     * Boolean to check if the game is still playable
     */
    private static boolean playable = true;

    /**
     * Runs the game
     *
     * @param input to be printed out what kind of game it is
     * @param vsComputer true, if it's a game vs a computer, otherwise false
     */
    private static void runGame(final String input, final boolean vsComputer) {
        Game game = new Game(vsComputer);
        boolean outputCom = true;

        System.out.printf(INTRO, input);
        System.out.println(game + "\n");

        // loop for the game
        while (game.getWinner().getId() == 2 && !game.gameOver()) {
            Player currentPlayer = game.getPlayers().get(game.getTurnCounter());
            boolean moved;

            if (currentPlayer instanceof Human) {
                System.out.printf(CHOOSE, game.getTurnCounter() + 1);
            } else if (outputCom) {
                System.out.println(COM_TURN);

                outputCom = false;
            }

            moved = game.turn();

            if (moved) {
                System.out.println(game);

                outputCom = true;
            }
        }

        //Hier wird die Ausgabe für den Gewinner festgestellt
        Player winner = game.getWinner();

        if (winner.getId() == 2) {
            System.out.println(NO_WINNER);
        } else if (winner instanceof Human){
            System.out.printf(WIN, winner.getId() + 1);
        } else {
            System.out.println(COM_WINS);
        }
    }

    /**
     * Start of the game
     *
     * @param args unused
     */
    public static void main(String[] args) {
        Scanner scanner = new Scanner(System.in);

        while (playable) {
            System.out.println(SPIELERANZAHL);
            boolean error = false;
            String input = scanner.nextLine();

            if (input.equals(VS_COM)) {
                runGame(VS_COM_STR, true);
            } else if (input.equals(VS_HUMAN)) {
                runGame(VS_HUMAN_STR, false);
            } else {
                System.out.println(ERROR_SPIELERANZAHL);
                error = true;
            }

            if (!error) {
                System.out.println(REPLAY);
                String replay = scanner.nextLine();

                if (!replay.equals(YES)) {
                    playable = false;
                }
            }
        }
    }
}
